--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
   <title>Clear View Escapes</title>
-  <meta name="keywords" content="Jayant Deshpande  Edison">
+  <meta name="keywords" content="Repo Test">
   <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
 </head>
 <body>
@@ -19,6 +19,16 @@
       </ul>
     </nav>
   </header>
+
+    <img src="assets/images/icons/clear-view-escapes.svg">
+    <a href="#">Get in Touch</a>
+    <nav>
+      <ul>
+        <li><a href="#our-beginning">Enjoy</a></li>
+        <li><a href="#features">Features</a></li>
+        <li><a href="#testimonials">Testimonials</a></li>
+      </ul>
+    </nav>
 
   <div class="large-hero">
     <img src="assets/images/hero--large.jpg">
